<resources>
    <string name="app_name">RAM</string>

    <string name="menu_characters">Characters</string>
    <string name="menu_locations">Locations</string>
    <string name="menu_episodes">Episodes</string>

    <string name="image_view_character_description">imageViewCharacter</string>

    <string name="name">name:</string>
    <string name="species">species:</string>
    <string name="type">type:</string>
    <string name="status">status:</string>
    <string name="gender">gender:</string>
    <string name="origin">origin:</string>
    <string name="location">location:</string>
    <string name="episodes">episodes:</string>
    <string name="filter_button_desc">filter button</string>


    <string name="title_btn_reset">Reset</string>
    <string name="title_btn_apply">Submit</string>
    <string name="status_filter_title">Status</string>
    <string name="tv_rb_alive">Alive</string>
    <string name="tv_rb_dead">Dead</string>
    <string name="tv_rb_unknown">unknown</string>
    <string name="gender_filter_title">Gender</string>

    <string name="species_filter_title">Species</string>
    <string name="hint_search">Search</string>
    <string name="name_filter_title">Name</string>
    <string name="episode">episode</string>
    <string name="air_date">air date</string>
    <string name="characters">characters</string>
    <string name="location_type">Location type</string>
    <string name="seasons_filter">Seasons</string>
    <string name="dimension">dimension</string>

    <string-array name="gender">
        <item>Any</item>
        <item>Male</item>
        <item>Female</item>
        <item>Genderless</item>
        <item>Unknown</item>
    </string-array>

    <string-array name="status">
        <item>Any</item>
        <item>Alive</item>
        <item>Dead</item>
        <item>Unknown</item>
    </string-array>

    <string-array name="species">
        <item>Any</item>
        <item>Human</item>
        <item>Alien</item>
        <item>Humanoid</item>
        <item>Robot</item>
        <item>Animal</item>
        <item>Mythological Creature</item>
        <item>Unknown</item>
    </string-array>

    <string-array name="seasons">
        <item>All</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="location_types">
        <item>Any</item>
        <item>Planet</item>
        <item>Cluster</item>
        <item>Dimension</item>
        <item>Space station</item>
        <item>Microverse</item>
    </string-array>
</resources>