<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="1dp"
    app:cardCornerRadius="1dp">


    <TextView
        android:id="@+id/episodeNumberTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/episode"
        android:textColor="@color/green_dark"
        android:textSize="@dimen/info_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/episodeNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/green_dark"
        android:textSize="@dimen/info_text_view"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/episodeNumberTitle"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="episode" />

    <TextView
        android:id="@+id/episodeNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/name"
        android:textColor="@color/green_dark"
        android:textSize="@dimen/info_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/episodeNumber" />

    <TextView
        android:id="@+id/episodeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/green_dark"
        android:textSize="@dimen/info_text_view"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/episodeNameTitle"
        app:layout_constraintTop_toBottomOf="@id/episodeNumber"
        tools:text="Name" />

    <TextView
        android:id="@+id/episodeAirDateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/air_date"
        android:textColor="@color/green_dark"
        android:textSize="@dimen/info_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/episodeName" />

    <TextView
        android:id="@+id/episodeAirDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/green_dark"
        android:textSize="@dimen/info_text_view"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/episodeAirDateTitle"
        app:layout_constraintTop_toBottomOf="@id/episodeName"
        tools:text="air date" />

    <TextView
        android:id="@+id/episodeCharactersTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/characters"
        android:textColor="@color/green_dark"
        android:textSize="@dimen/info_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/episodeAirDate" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewEpisodeCharacters"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/episodeCharactersTitle"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/episodeCharactersTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>